updated several spelling, layout issue. Discovered SMS processing issue

--- a/app/assets/stylesheets/_login.css.scss
+++ b/app/assets/stylesheets/_login.css.scss
@@ -62,10 +62,13 @@
   }
   #dashboard_search {
     margin-left: 0px;
+    margin-right: 40px;
     margin-top: 6px;
+    float: left;
+    
     input {
-	  padding:4px;
-	  margin-top:-5px;
+	    padding:4px;
+	    margin-top:-5px;
       width: 200px;
     }
   }
