--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -20,7 +20,7 @@
     li {
       height: 40px;
       display: inline;
-      margin-right: 5px;
+      margin-right: 15px;
       padding-right: 2px;
       a {
         font-size: 14px;
